# DTU-02214-GRP-10

./: .gitignore
camera/: README.md
faces/: build_member_non_member_dirs.py  camera_app.py  download_faces.py  export_tflite_micro.py  predict.py  prepare_dataset.py  pyproject.toml  train.py  train_transfer.py  transfer_model.py
faces/esp32/: sdkconfig.defaults
faces/esp32/main/: CMakeLists.txt  camera.cpp  inference.cpp  inference.h  main.cpp  model.tflite
faces/faces/python/: download_faces.py  pyproject.toml
faces/model/: best_model.pth
keywords/python/: main.py
