[project]
name = "faces"
version = "0.1.0"
description = "A face detection application that recognizes the faces of the team member"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "pycocotools>=2.0.0",
    "gdown>=5.0.0",
    "Pillow>=10.0.0",
    "filelock>=3.13.0",
    "beautifulsoup4>=4.12.0",
]
